# any-player

./: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  PROJECT_STATUS.md  README.md  SPOTIFY_IMPLEMENTATION.md  START_HERE.md  TAURI_CHECKLIST.md  TAURI_IMPLEMENTATION.md  TAURI_INDEX.md  TAURI_QUICKSTART.md  TAURI_README.md  TAURI_SETUP.md  TAURI_START.txt  TAURI_SUMMARY.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml
.github/copilot/: copilot-instructions.md
.github/workflows/: build-test.yml
src/: App.css  App.tsx  api.ts  gui_main.rs  lib.rs  main.rs  types.ts  ui.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/cache/: mod.rs
src-tauri/src/commands/: auth.rs  cache.rs  custom_playlists.rs  helpers.rs  mod.rs  playback.rs  playlists.rs  providers.rs  state.rs  types.rs
src-tauri/src/config/: mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/playback/: mod.rs  spotify_audio.rs  spotify_session.rs
src-tauri/src/providers/: jellyfin.rs  mod.rs  spotify.rs
src-tauri/src/state/: mod.rs
src-tauri/ui/: .gitignore  package-lock.json  package.json  tsconfig.json
src-tauri/ui/src/: api.ts  app.ts  index.html  types.ts
src/components/: BottomPlayBar.tsx  CustomPlaylistEditor.css  CustomPlaylistEditor.tsx  NowPlaying.tsx  NowPlayingControls.tsx  PlaylistViewer.tsx  Playlists.tsx  ProgressBar.tsx  ProviderStatus.tsx  Search.tsx  Settings.tsx  Sidebar.tsx  TrackTable.css  TrackTable.tsx  UnionPlaylistEditor.tsx  VolumeControl.tsx  index.ts
src/components/shared/: DeleteConfirmModal.tsx  PlaylistHeader.tsx  SearchBar.tsx  index.ts
src/hooks/: index.ts  useAudioPlayback.ts  useCustomPlaylists.ts  useJellyfinAuth.ts  usePlayback.ts  usePlaylistEditor.ts  usePlaylists.ts  useSearch.ts  useSpotifyAuth.ts
src/models/: mod.rs
src/playback/: mod.rs
src/providers/: jellyfin.rs  mod.rs  spotify.rs
src/ui/: components.rs  mod.rs  pages.rs  theme.rs
src/utils/: retryHelper.ts  trackFilters.ts
