[package]
name = "any-player"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI and TUI
clap = { version = "4.4", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"

# Async runtime
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

# Spotify integration
rspotify = "0.12"
librespot = { version = "0.4", features = ["rodio-backend"] }
librespot-core = "0.4"

# HTTP and async
reqwest = { version = "0.11", features = ["json"] }

# JSON and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"

# Audio playback
rodio = "0.17"
symphonia = "0.5"

# Config management
config = "0.13"
dirs = "5.0"

# Utilities
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
http = "1.0"
