[package]
name = "any-player"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "any_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["rustls-tls"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

# Spotify integration - rspotify for Web API, librespot for full song streaming
rspotify = "0.12"
# Use librespot from git (0.8 has vergen conflicts)
librespot-core = { git = "https://github.com/librespot-org/librespot.git", branch = "dev" }
librespot-playback = { git = "https://github.com/librespot-org/librespot.git", branch = "dev", features = [
    "alsa-backend",
] }
librespot-connect = { git = "https://github.com/librespot-org/librespot.git", branch = "dev" }
librespot-oauth = { git = "https://github.com/librespot-org/librespot.git", branch = "dev" }

# HTTP and async
reqwest = { version = "0.12", features = ["json", "blocking"] }

# JSON and serialization
toml = "0.8"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"

# Audio playback
rodio = "0.17"
symphonia = "0.5"

# Config management
config = "0.13"
dirs = "5.0"
keyring = { version = "3.6", features = ["linux-native"] }

# Utilities
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
http = "1.0"

[dev-dependencies]
serial_test = "3.2"

# Override vergen dependencies to fix version conflicts
[patch.crates-io]
vergen-gitcl = { git = "https://github.com/rustyhorde/vergen.git", tag = "vergen_lib_0.1.6" }
vergen-lib = { git = "https://github.com/rustyhorde/vergen.git", tag = "vergen_lib_0.1.6" }
